fix z-index issues

--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@
 }
 
 .cm-gutter {
-  z-index: 5 !important;
+  z-index: auto;
   background-color: white;
 }
 
@@ -42,7 +42,6 @@
 
 .gutter {
   position: relative;
-  z-index: 20;
   background-color: #eee;
   background-repeat: no-repeat;
   background-position: 50%;
